# django-for-agents

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: mypy.yml  release.yml  tests.yml
django_for_agents/: __init__.py  apps.py  llms.py  urls.py  views.py
django_for_agents/llms/: __init__.py  discovery.py  view.py
django_for_agents/templatetags/: __init__.py  for_agents.py
docs/: api.rst  conf.py  index.rst  installation.rst  llms_txt.rst  make.bat  quickstart.rst  settings.rst  views.rst
tests/: __init__.py  settings.py  test_llms.py  test_views.py  urls.py
tests/templates/pages/: docs.html  docs.md  home.md  item.html  item.md  with_jsonld.html
