[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "django-for-agents"
version = "0.0.3"
description = "Django utilities to expose agent-friendly markdown and llms.txt indexes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Eneko Illarramendi" }
]
keywords = ["django", "llm", "agents", "markdown", "llms-txt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "django>=6.0",
]

[project.urls]
Homepage = "https://github.com/eillarra/django-for-agents"
Repository = "https://github.com/eillarra/django-for-agents"
Issues = "https://github.com/eillarra/django-for-agents/issues"

[project.optional-dependencies]
markdown = [
  "markdownify>=1.2.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-copybutton>=0.5",
]

[dependency-groups]
dev = [
  "django-stubs>=5.0",
  "markdownify>=1.2.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
python_version = "3.12"
files = ["django_for_agents"]
plugins = ["mypy_django_plugin.main"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = ["tests/"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.hatch.build.targets.wheel]
packages = ["django_for_agents"]

[tool.hatch.build.targets.sdist]
include = [
  "django_for_agents",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "docs",
  ".readthedocs.yaml",
]
